add license, make tests run in eclipse